# wc26-bnaul

./: .env.example  .gitignore  AGENTS.md  README.md  RESEARCH_DESIGN.md  STRATEGY.md  _run_cmd.py  backtest.py  convert_db.py  edge_finder.py  enrich_manual.py  fix_auto_agent.py  patch.py  pyproject.toml  reapply_fixes.py  rewrite.py  test_prompt.py  wc26.sh  wc26_bnaul.py
.github/: issue_backtest_analysis.md  issue_experiment_evaluation.md  issue_match_analysis.md  issue_ranking_improvement.md  issue_research_synthesis.md  issue_research_synthesis_v2.md
data/: advanced_stats.csv  betting_db.json  matches_db.json  referees_db.json  teams_db.json  venues_db.json
data/amir_dataset/: CONTRIBUTING.md  LICENSE  README.md  requirements.txt
data/amir_dataset/api/: main.py  (+2 more)
docs/: 00_OVERVIEW.md  03_BOOKMAKER_VALIDATION.md  BACKTEST_KNOCKOUT_DRAW_AWARENESS.md  SELECTIVE_SUBMISSION_STRATEGY.md
logs/: performance.json  predictions.jsonl  results.jsonl
research/: ARGENTINA_ITALY_ANALYSIS.md  BRAZIL_JAPAN_ANALYSIS.md  BRAZIL_JAPAN_DETAILED.md  COMPETITOR_STRATEGY_ANALYSIS.md  FIFA_DATA_SOURCES.md  FINDINGS.md  FRANCE_SWEDEN_ANALYSIS.md  GERMANY_PARAGUAY_DETAILED.md  LESSONS_LEARNED.md  NETHERLANDS_MOROCCO_DETAILED.md
scripts/: fetch_advanced_stats.py  migrate_to_json.py
src/wc26_bnaul/: __init__.py  __main__.py  auto_agent.py  auto_predict.py  batch_predict.py  ensemble_predictor.py  fifa_data.py  json_db.py  news_monitor.py  news_monitor_real.py  prediction_logger.py  predictor.py  reasoning_analyzer.py  simulate.py  strategy.py  test_flow.py
tests/: test_core.py
(+15 files in other folders)
